Resources/Style/component/button.css
button:not(.link), a.btn {
	@apply text-sm;
	@apply py-0.5 px-2;
	@apply border border-gray-400;
	@apply cursor-pointer;

	&:hover {
		@apply bg-gray-200;
	}

	&.primary {
		@apply bg-sky-600 border-sky-700;
		@apply text-white;

		&:hover {
			@apply bg-sky-700 border-sky-800;
		}
	}

	&.success {
		@apply bg-green-600 border-green-700;
		@apply text-white;

		&:hover {
			@apply bg-green-700 border-green-800;
		}
	}

	&.warning {
		@apply bg-yellow-600 border-yellow-700;
		@apply text-white;

		&:hover {
			@apply bg-yellow-700 border-yellow-800;
		}
	}

	&.danger {
		@apply bg-red-700 border-red-800;
		@apply text-white;

		&:hover {
			@apply bg-red-800 border-red-900;
		}
	}
}

